@@ -1,9 +1,11 @@
 package com.swrobotics.robot.control;
 
+import com.pathplanner.lib.path.PathConstraints;
 import com.swrobotics.lib.field.FieldInfo;
 import com.swrobotics.lib.input.XboxController;
 import com.swrobotics.lib.net.NTBoolean;
 import com.swrobotics.lib.net.NTEntry;
+import com.swrobotics.lib.pathfinding.pathplanner.AutoBuilderExt;
 import com.swrobotics.lib.utils.MathUtil;
 import com.swrobotics.robot.RobotContainer;
 import com.swrobotics.robot.commands.CharacterizeWheelsCommand;
@@ -12,6 +14,8 @@ import com.swrobotics.robot.commands.RumblePatternCommands;
 import com.swrobotics.robot.config.Constants;
 import com.swrobotics.robot.config.FieldPositions;
 
+import com.swrobotics.robot.config.PathEnvironments;
+import com.swrobotics.robot.logging.FieldView;
 import com.swrobotics.robot.subsystems.algae.AlgaeIntakeSubsystem;
 import com.swrobotics.robot.subsystems.outtake.CoralOuttakeSubsystem;
 import com.swrobotics.robot.subsystems.superstructure.SuperstructureSubsystem;
@@ -19,8 +23,11 @@ import edu.wpi.first.math.geometry.Rotation2d;
 import edu.wpi.first.math.geometry.Translation2d;
 import edu.wpi.first.math.util.Units;
 import edu.wpi.first.wpilibj.DriverStation;
+import edu.wpi.first.wpilibj2.command.Commands;
 import edu.wpi.first.wpilibj2.command.SubsystemBase;
 import edu.wpi.first.wpilibj2.command.button.Trigger;
+
+import java.util.Set;
 
 public final class ControlBoard extends SubsystemBase {
     /*
@@ -131,7 +138,7 @@ public final class ControlBoard extends SubsystemBase {
                 .whileTrue(robot.coralOuttake.commandSetState(CoralOuttakeSubsystem.State.SCORE));
        operator.leftBumper.trigger()
                .onTrue(robot.coralOuttake.commandSetState(CoralOuttakeSubsystem.State.REVERSE)
-                       .withTimeout(0.05));
+                       .withTimeout(0.15));
 
         // Everything past here is for testing and should eventually be removed
 
@@ -141,7 +148,16 @@ public final class ControlBoard extends SubsystemBase {
 
 //        driver.b.onPressed(RumblePatternCommands.endgameAlert(driver, 0.75));
 
-//        driver.x.onPressed(Commands.defer(robot.pathfindingTest::getFollowCommand, Collections.emptySet()));
+//        driver.x.onPressed(Commands.defer(() -> AutoBuilderExt.pathfindToPose(
+//                PathEnvironments.kFieldWithAutoGamePieces,
+//                FieldView.pathfindingGoal.getPose(),
+//                new PathConstraints(
+//                        Constants.kAutoMaxDriveSpeed,
+//                        Constants.kAutoMaxDriveAccel,
+//                        Units.rotationsToRadians(Constants.kAutoMaxTurnSpeed),
+//                        Units.rotationsToRadians(Constants.kAutoMaxTurnAccel)
+//                )
+//        ), Set.of(robot.drive)));
 //        driver.y.onPressed(() -> FieldView.pathfindingGoal.setPose(robot.drive.getEstimatedPose()));
 
         operator.start.trigger()
